--- a/frontend/src/components/halls/Halls.css
+++ b/frontend/src/components/halls/Halls.css
@@ -1,6 +1,7 @@
 .auditorium-cards-container {
     display: grid;
     gap: 20px;
+    /* width: 90%; */
     justify-items: center;
     padding: 20px;
 }
@@ -19,7 +20,7 @@
 
 .auditorium-card {
     width: 100%;
-    max-width: 500px;
+    max-width: 480px;
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 20px;
@@ -48,15 +49,16 @@
     background-color: #007bff;
     color: #fff;
     border: none;
-    padding: 10px 20px;
+    padding: 10px;
     border-radius: 5px;
     cursor: pointer;
     text-align: center;
     display: inline-block;
     text-decoration: none;
-    margin-top: 20px;
-    margin-left: 10px;
-    width:450px;
+    width:400px;
+    display: block;
+    margin: auto;
+    margin-top: 30px;
 }
 
 
